--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
   <meta property="og:title" content="Smith & Gold | Design + Development">
 
   <style>
-      @font-face {
+      <!-- @font-face {
           font-family: 'brandon-grotesque';
           src: url("../fonts/Brandon-Grotesque-bold-webfont.eot");
           src: url("../fonts/Brandon-Grotesque-bold-webfontd41d.eot?#iefix") format("embedded-opentype"), url("../fonts/Brandon-Grotesque-bold-webfont.woff") format("woff"), url("../fonts/Brandon-Grotesque-bold-webfont.ttf") format("truetype"), url("../fonts/Brandon-Grotesque-bold-webfont.svg#brandon-grotesque-bold") format("svg");
@@ -19,7 +19,7 @@
           src: url("../fonts/Monosten-A-webfontd41d.eot?#iefix") format("embedded-opentype"), url("../fonts/Monosten-A-webfont.woff2") format("woff2"), url("../fonts/Monosten-A-webfont.woff") format("woff"), url("../fonts/Monosten-A-webfont.ttf") format("truetype"), url("../fonts/Monosten-A-webfont.svg#monostena") format("svg");
           font-weight: normal;
           font-style: normal;
-      }
+      } -->
 
       html{
         background-image: linear-gradient(to left bottom, #18161a, #2b2a2d, #3f3f41, #555556, #6c6c6c) !important;
@@ -268,11 +268,11 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <script src="https://smtpjs.com/v3/smtp.js">
+  <!-- <script src="https://smtpjs.com/v3/smtp.js">
   </script>
   <script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  crossorigin="anonymous"></script>
-<script src="semantic/dist/semantic.min.js"></script>
+  crossorigin="anonymous"></script> -->
+<!-- <script src="semantic/dist/semantic.min.js"></script> -->
 </html>
